--- a/Bundle/DynamicSiteBundle/Resources/config/services.yml
+++ b/Bundle/DynamicSiteBundle/Resources/config/services.yml
@@ -5,5 +5,7 @@ services:
     dynamicsite.generator:
         class: %dynamicsite.generator.class%
         arguments:
+            - @ezpublish.api.repository
             - @ezpublish.api.service.location
             - @ezpublish.api.service.search
+            - @ezpublish.api.service.user
