--- a/Bundle/DynamicSiteBundle/Resources/config/dynamicsite_parameters.yml
+++ b/Bundle/DynamicSiteBundle/Resources/config/dynamicsite_parameters.yml
@@ -1,6 +1,7 @@
 parameters :
     # DYNAMIC CONFIG FILE relative to installation root
     dynamicsite.config_file : /web/var/dynamicsite/config.yml
+    dynamicsite.parameters_file : /web/var/dynamicsite/parameters.yml
     # DYNAMIC DEFINITION FROM CONTENT
     # Site definition content type
     dynamicsite.content_type : site_settings
@@ -8,3 +9,6 @@ parameters :
     dynamicsite.fields.domain : domain
     # Tree Root Content Field must be an eZ Object Relation
     dynamicsite.fields.root : root_node
+    # Node for user Placement
+    dynamicsite.fields.default_user_placement : default_user_placement
+
